core-infrastructure/traefik/manifests/minecraft-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft-ingress
  namespace: game-servers
spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mc-router
          port: 25565
